@@ -1,19 +1,13 @@
-import org.apache.commons.lang.StringUtils;
-
-import java.util.*;
-
 public class Main {
     public static void main(String[] args) {
         Integer a = 101;
         System.out.println(Integer.valueOf(12));
-        Double d=new Double(3.23232111111112);
-        Float f=  Float.valueOf(String.valueOf(d));
+        Double d = new Double(3.23232111111112);
+        Float f = Float.valueOf(String.valueOf(d));
         System.out.println(f);
     }
-    public static class A<TT>{
+
+    public static class A<TT> {
 
     }
-
-
-
 }
